[package]
name = "solana_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
axum = "0.6.18"
chrono = "0.4.37"
crossbeam-channel = "0.5.12"
discord = { git = "https://github.com/SpaceManiac/discord-rs" }
grammers-client = { git = "https://github.com/Lonami/grammers"}
grammers-session = { git = "https://github.com/Lonami/grammers", version = "0.5.1" }
grammers-tl-types = { git = "https://github.com/Lonami/grammers" }
reqwest = { version = "0.12", features = [ "json", "blocking"], default-features = true }
thiserror = "1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
regex = "1.10.4"
serde = { version = "1", features = ["derive", "std", "alloc"], default-features = false }
serde-enum-str = "0.4"
serde_json = "1.0.115"
#serenity = {version = "0.12.1" }
#selene-helius-sdk = "0.2.4"
stringr = "0.1.3"
solana-client = "1.18.12"
solana-pubsub-client = "1.18.12"
solana-rpc = "1.18.12"
solana-sdk = "1.18.12"
solana-transaction-status = "1.18.12"
tokio = { version = "1.34.0", features = ["full"] }
#	features = ["macros", "rt-multi-thread"] }
url = "2"
