[package]
name = "solana_bot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.79"
axum = "0.6.18"
base64 = "0.22.1"
bs58 = "0.5.1"
bincode = "1.3.3"
chrono = "0.4.37"
clap = {version = "4.5.21", features = ["derive"]}
crossbeam-channel = "0.5.12"
discord = { git = "https://github.com/SpaceManiac/discord-rs" }
swap = { git = "https://github.com/0xcrust/raydium-swap.git"}
lazy_static = "1.4.0"
grammers-client = { git = "https://github.com/Lonami/grammers"}
grammers-session = { git = "https://github.com/Lonami/grammers", version = "0.5.1" }
grammers-tl-types = { git = "https://github.com/Lonami/grammers" }

jupiter-swap-api-client = { git = "https://github.com/jup-ag/jupiter-swap-api-client"}
reqwest = { version = "0.12", features = [ "json", "blocking"], default-features = true }
thiserror = "1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
regex = "1.10.4"
rust_decimal = "1.36"
serde = { version = "1", features = ["derive", "std", "alloc"], default-features = false }
serde-enum-str = "0.4"
serde_qs = "0.12.0"
serde_json = "1.0.115"
serde_with =  {version = "3.11.0", features = ["base64"] }
#serenity = {version = "0.12.1" }
#selene-helius-sdk = "0.2.4"
stringr = "0.1.3"
solana-client = "1.18.16"
solana-pubsub-client = "1.18.16"
solana-rpc = "1.18.16"
solana-sdk = "1.18.16"
solana-transaction-status = "1.18.16"
spl-associated-token-account = "3.0.2"
tokio = { version = "1.34.0", features = ["full"] }
#	features = ["macros", "rt-multi-thread"] }
url = "2"
